--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -174,7 +174,7 @@
 			 }
 		  },
 		  submitHandler: function(form) {
-			var message = "<%= _("Please wait") -%>";
+			var message = <%= jss _("Please wait") -%>;
 			disableFormOnSubmit(message);
                         form.submit();
                   },
