--- a/plugins/roles/app/views/roles/index.rhtml
+++ b/plugins/roles/app/views/roles/index.rhtml
@@ -79,10 +79,10 @@
     function select_users_dialog() {
       var open_dialog = select_many_dialog({
         kind : 'users',
-        title : '<%= _('Assign Users') %>',
-        selected_title : '<%= _('Selected Users') %>',
-        unselected_title : '<%= _('Available Users') %>',
-        tooltip : '<%= _('Click user names to assign/remove users') %>',
+        title : <%= jss _('Assign Users') %>,
+        selected_title : <%= jss _('Selected Users') %>,
+        unselected_title : <%= jss _('Available Users') %>,
+        tooltip : <%= jss _('Click user names to assign/remove users') %>,
         loadItems : function (dialogId) {
           return $('#users_of_'+dialogId.replace(/ /g,"\\."))[0].value.split(",")
         },
