- translated text in JavaScript is not escaped (bnc#604224) - webyast-software-ui 0.2.6

--- a/plugins/software/app/views/patch_updates/index.html.erb
+++ b/plugins/software/app/views/patch_updates/index.html.erb
@@ -38,7 +38,7 @@
   });
   function disableForm(){
     $(document).ready(function() {
-      var message = "<%= _("Please wait") -%>";
+      var message = <%= jss _("Please wait") -%>;
       disableFormOnSubmit(message);    
     });
   }
