--- a/plugins/ldap/app/views/ldap/index.html.erb
+++ b/plugins/ldap/app/views/ldap/index.html.erb
@@ -30,8 +30,8 @@
       $("#ldapForm").validate();
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
-	    required: "<%= _("This field is required.") -%>",
-	    server: "<%= _("Enter a valid domain name or an IP address.")  -%>" 
+	    required: <%= jss _("This field is required.") -%>,
+	    server: <%= jss _("Enter a valid domain name or an IP address.")  -%> 
       });
     });
 
