- translated text in JavaScript is not escaped (bnc#604224) - webyast-kerberos-ui 0.2.4

--- a/plugins/kerberos/app/views/kerberos/index.html.erb
+++ b/plugins/kerberos/app/views/kerberos/index.html.erb
@@ -30,8 +30,8 @@
       $("#kerberosForm").validate();
       // make the error message translatable - override the default messsage
       $.extend($.validator.messages, {
-	    required: "<%= _("This field is required.") -%>",
-	    kdc: "<%= _("Enter a valid domain name or an IP address.")  -%>" 
+	    required: <%= jss _("This field is required.") -%>,
+	    kdc: <%= jss _("Enter a valid domain name or an IP address.")  -%> 
       });
     });
 
