- fixed wrong JavaScript escape sequences for new line (\n) - webyast-software-ui 0.2.7

--- a/plugins/software/app/views/repositories/add.html.erb
+++ b/plugins/software/app/views/repositories/add.html.erb
@@ -122,7 +122,7 @@
       {
 	 if (url == repos[i])
 	 {
-	   return confirm(<%= jss _("A repository with this URL already exists.\\nCreate a duplicate?") -%>);
+	   return confirm(<%= jss _("A repository with this URL already exists.\nCreate a duplicate?") -%>);
 	 };
       };
 
