fixed Ruby warning, closed <input> tag

--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -202,28 +202,28 @@
     <div id="softwarebar">
       <div id="home-container">
 	<div id="home">		
-	  <%=link_to image_tag ("home.png", :id=>"home_image"), :controller=>"controlpanel", :action => :index %>
+	  <%=  link_to image_tag("home.png", :id=>"home_image"), :controller=>"controlpanel", :action => :index %>
 	</div>
       </div>
       <span style="clear:both; overflow:hidden;"></span>
       <div id="search-container">
 	<form action="#" id="quicksearch">
 	   <label><%= _("Quick Search") %></label>
-	   <input type="text" id="repo_search">
+	   <input type="text" id="repo_search"/>
 	</form>
       </div>
       <span style="clear:both; overflow:hidden;"></span>
       <div id="link-container">
 	  <% if !disabled %>
 	    <div id="action_links" class="action_links">	
-	      <%=link_to image_tag ("/icons/yast-online_update.png", :class=>"icons") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
+	      <%= link_to image_tag("/icons/yast-online_update.png", :class=>"icons") +  (_("Add New Repository") ), {:action => 'add'}, :onclick=>"$('#progress').show()" %>
 	    </div>
 	  <% end %>
       </div>
       <div id="filter-container">
 	<label for="filter">
 	  <%=  _("Filter repositories") %>
-	  <%=image_tag ("/images/filter.png", :style=>"vertical-align:text-top; margin-top:2px; margin-right:3px;width:16px; height:14px;")%>
+	  <%= image_tag("/images/filter.png", :style=>"vertical-align:text-top; margin-top:2px; margin-right:3px;width:16px; height:14px;")%>
 	</label>
 	<%= select_tag "filter", options_for_select([
 	  [ _("All"), "all"],
