--- a/plugins/software/app/views/patch_updates/_patches.html.erb
+++ b/plugins/software/app/views/patch_updates/_patches.html.erb
@@ -32,13 +32,14 @@ _("One of the patches seems to update WebYaST itself.
 You may need to reload the page after applying the patch.") -%></p>
 <% end %>
 
-<% if @patch_updates.empty? %>
+<%# no patch or all patches are installed %>
+<% if @patch_updates.empty? || @patch_updates.all?{|p| p.installed} %>
   <h4 style="margin:4px 0px 0px 0px; padding:0px; text-shadow: 0pt -1px 0pt rgba(0, 0, 0, 0.2), 0pt 1px 0pt rgba(250, 250, 250, 0.9);" ><%= _("No patches available") -%></h4>
 <% else %>
 <table summary="" class="patches" <%= @patch_updates.empty? ? "style=\"visibility: hidden;\"" : "" %> >
   <tr id="first_row">
     <th class="first checkbox" width=8% >
-      <input type="checkbox" name="All" onclick="check_all()" id="All" style="float: left;">
+      <input type="checkbox" name="All" onclick="check_all()" id="All" style="float: left;"/>
       <div style="margin-top:1px;"><%=_("Check")%></div>
     </th>
     <th width=5%><%=_("Kind")%></th>
@@ -56,9 +57,11 @@ You may need to reload the page after applying the patch.") -%></p>
   kinds = { "security" => '/icons/kupdateapplet_red.png',
     "important" => '/icons/kupdateapplet_yellow.png',
     "green" => '/icons/kupdateapplet_green.png',
-    "optional" => '/icons/kupdateapplet_optional.png' }
+    "optional" => '/icons/kupdateapplet_optional.png',
+    "low" => '/icons/kupdateapplet_optional.png' }
 %>
   <% @patch_updates.each do |patch_update| %>
+    <% unless patch_update.installed %>
     <tr>
       <td class="checkbox"><input type="checkbox" id=<%= "patch_#{patch_update.resolvable_id}" %> name=<%="patch_#{patch_update.resolvable_id}" %> value=<%=patch_update.resolvable_id%> /></td>
 
@@ -78,6 +81,7 @@ You may need to reload the page after applying the patch.") -%></p>
             :onclick=>"$('#progress').show()", :method => :post, :action => "install" %></td>
         <% end %>
     </tr>
+    <% end %>
   <% end %>
 </table>
 <% end %>
