- disabled cookies result in ActionController::InvalidAuthenticityToken (bnc#637361) - webyast-base-ui 0.2.18

--- a/webclient/app/views/shared/cookies_disabled.html.erb
+++ b/webclient/app/views/shared/cookies_disabled.html.erb
@@ -28,5 +28,5 @@ $(document).ready(function() {
 <p>WebYaST tried to establish and save a session in your web browser
 but failed.</p>
 
-<p>Please enable cookies in your browser and try again.</p>
+<p>Please enable cookies in your browser and <a href="/session">login again</a></p>
 
