--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -65,10 +65,12 @@
       unselected_title : <%= jss _('Available Members') %>,
       tooltip : <%= jss _('Click user names to select/unselect members') %>,
       loadItems : function (dialogId) { 
-        return $('#form_'+dialogId+' .members-string')[0].value.split(",")
+        var members = $('#form_'+dialogId+' .members-string')[0].value.split(",");
+	this.system_users = arrays_complement($('#form_'+dialogId+' .members-string')[0].value.split(","), $("#all_users_string")[0].value.split(","));
+        return members;
       },
       storeItems : function (dialogId, items) { 
-        $('#form_'+dialogId+' .members-string')[0].value = items.join(",");
+        $('#form_'+dialogId+' .members-string')[0].value = this.system_users.concat(items).join(",");
       },
       allItems : function (dialogId) { 
         return $('#all_users_string')[0].value.split(",") 
@@ -198,6 +200,7 @@
  </div>
 </div>
     <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
+    <div><input type="hidden" id="system_users_string" value="daemon" /></div>
 
   <div class="nav-buttons">
     <%= form_back_button -%>
