use values from REST in hidden field

--- a/plugins/users/app/views/groups/index.html.erb
+++ b/plugins/users/app/views/groups/index.html.erb
@@ -200,7 +200,7 @@
  </div>
 </div>
     <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
-    <div><input type="hidden" id="system_users_string" value="daemon" /></div>
+    <div><input type="hidden" id="system_users_string" value="<%= @all_sys_users_string %>" /></div>
 
   <div class="nav-buttons">
     <%= form_back_button -%>
