--- a/plugins/users/app/views/users/new.html.erb
+++ b/plugins/users/app/views/users/new.html.erb
@@ -213,4 +213,5 @@ function def_group_validation(which){ return true; }
  <% end %>
 	    <div><input type="hidden" id="all_grps_string" value="<%= @all_grps_string %>" /></div>
             <div><input type="hidden" id="all_roles_string" value="<%= @all_roles_string %>" /></div>
+            <div><input type="hidden" id="all_users_string" value="<%= @all_users_string %>" /></div>
 </div>
