--- a/plugins/software/app/views/repositories/index.html.erb
+++ b/plugins/software/app/views/repositories/index.html.erb
@@ -30,6 +30,11 @@
 
   <style type="text/css">
     label.error { float: none; color: red; padding-left: 6.5em; vertical-align: top; width: 70%; text-align: left }
+    /* style for 'enabled'/'disabled' status texts */
+    span.repo_status { font-style: italic }
+    span.repo_status_enabled { color: rgb(0,255,0) }
+    span.repo_status_disabled { color: rgb(255,0,0) }
+    div.option_name { min-width: 6em; float: left; margin-left: 1em }
   </style>
 
   <script type="text/javascript">
@@ -266,32 +271,32 @@
 		  </script>
 		<% end %>
 
-		<p><div style="min-width: 6em; float: left; margin-left: 1em">Alias: </div><i><%= h r.id %></i></p>
+		<p><div class="option_name">Alias: </div><i><%= h r.id %></i></p>
 
-		<p><div style="min-width: 6em; float: left; margin-left: 1em">Name: </div>
+		<p><div class="option_name">Name: </div>
 		  <%= f.text_field :name, :disabled => disabled, :class => 'required' -%></p>
 
-		<p><div style="min-width: 6em; float: left; margin-left: 1em">URL: </div>
+		<p><div class="option_name">URL: </div>
 		  <%= f.text_field :url, :disabled => disabled, :class => 'repo_url required' -%></p>
 
-		<p><%= _("Repository is currently") %> <i><%= bool_status r.enabled %></i>.
+		<p><%= repo_status_msg r.enabled %>
 		  <% if !disabled  %>
 		    <%= hidden_field_with_link f, sid, :enabled, r.enabled,
-		      _("Repository will be %s.") % bool_status(!r.enabled, {}) -%>
+		      repo_change_msg(!r.enabled) -%>
 		  <% end %>
 		</p>
 
-		<p><%= _("Autorefresh is currently") %> <i><%= bool_status r.autorefresh %></i>.
+		<p><%= refresh_status_msg r.autorefresh %>
 		  <% if !disabled  %>
 		    <%= hidden_field_with_link f, sid, :autorefresh, r.autorefresh,
-		      _("Autorefresh will be %s.") % bool_status(!r.autorefresh, {}) -%>
+		      refresh_change_msg(!r.autorefresh) -%>
 		  <% end %>
 		</p>
 
-		<p><%= _("Keeping downloaded packages is currently") %> <i><%= bool_status r.keep_packages %>.</i>
+		<p><%= keep_status_msg r.keep_packages %>
 		  <% if !disabled  %>
 		    <%= hidden_field_with_link f, sid, :keep_packages, r.keep_packages,
-		      _("Keep packages option will be %s.") % bool_status(!r.keep_packages, {}) -%>
+		      keep_change_msg(!r.keep_packages) -%>
 		  <% end %>
 		</p>
 
